--- a/Market_analysis.ipynb
+++ b/Market_analysis.ipynb
@@ -6,7 +6,7 @@
       "name": "Market analysis",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOrYB2NdgwoKDgmmdyRHTwC",
+      "authorship_tag": "ABX9TyNIC+MuNLPz7IlsKTIAoKl6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -45,6 +45,29 @@
         "import json\n",
         "import openpyxl \n",
         "from datetime import datetime,date,timedelta                        # For manual date operations"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "kWRbXrdD7QH9",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Syncing the Excel File\n",
+        "from pydrive.auth import GoogleAuth\n",
+        "from pydrive.drive import GoogleDrive\n",
+        "from google.colab import auth\n",
+        "from oauth2client.client import GoogleCredentials\n",
+        "auth.authenticate_user()\n",
+        "gauth = GoogleAuth()\n",
+        "gauth.credentials = GoogleCredentials.get_application_default()\n",
+        "drive = GoogleDrive(gauth)\n",
+        "downloaded = drive.CreateFile({'id':\"1KoHPJZCWk42iumASg5ebUoVnknUzWgju\"}) \n",
+        "downloaded.GetContentFile('Finance Analysis.xlsx')\n"
       ],
       "execution_count": 0,
       "outputs": []
