--- a/Market_analysis.ipynb
+++ b/Market_analysis.ipynb
@@ -6,7 +6,6 @@
       "name": "Market analysis",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOGHKSWt4knKcv9EP3yp5Sk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -444,6 +443,20 @@
         "#@title Stock { display-mode: \"form\",run: \"auto\" }\n",
         "Company = \"BEST\" #@param {type:\"string\"}\n",
         "Stock(Company,12)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "u9FE6LY7VbMy",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "#Download the Vb Scripts and Excel Files\n",
+        "#Then Run the 3 script files and finally open the finance analysis to view the dashboard"
       ],
       "execution_count": 0,
       "outputs": []
