--- a/Market_analysis.ipynb
+++ b/Market_analysis.ipynb
@@ -65,8 +65,12 @@
         "gauth = GoogleAuth()\n",
         "gauth.credentials = GoogleCredentials.get_application_default()\n",
         "drive = GoogleDrive(gauth)\n",
-        "downloaded = drive.CreateFile({'id':\"1ukO0Ls34dnqwsnJ_xZAfC4ASBLCEtfbN\"}) \n",
-        "downloaded.GetContentFile('Reference.xlsx')\n",
+        "downloaded = drive.CreateFile({'id':\"1JGE2GjuC3IeCgzldPx0wpcD-gxqmOh6b\"}) \n",
+        "downloaded.GetContentFile('stockvbs.xlsx')\n",
+        "downloaded = drive.CreateFile({'id':\"1wlcFTkdLTri48ufBLBFbJ-6mZCKia14R\"}) \n",
+        "downloaded.GetContentFile('ccvbs.xlsx')\n",
+        "downloaded = drive.CreateFile({'id':\"1OaC_zHyZ2f5hxXNlDm1Q_6WSFuiECUtY\"}) \n",
+        "downloaded.GetContentFile('forexvb.xlsx')\n",
         "downloaded = drive.CreateFile({'id':\"1W28WyCwUF-0d0lYoedtVgp6fw4-4okpX\"})\n",
         "downloaded.GetContentFile('Finance Analysis.xlsx')\n",
         "downloaded = drive.CreateFile({'id':\"1qh_2-pVXy79Bv-Wze4d8fq3GaJUDk5zl\"}) \n",
@@ -451,7 +455,7 @@
         "colab": {}
       },
       "source": [
-        "#Run the VB Script and View the dashboard in Finance Analysis.xlsx\n",
+        "#Run the VB Scripts and View the dashboard in Finance Analysis.xlsx\n",
         "#Since we openpyxl dont work with pivot chart\n",
         "#This script copies from one excel to another to get the dashboard."
       ],
