--- a/Market_analysis.ipynb
+++ b/Market_analysis.ipynb
@@ -65,12 +65,8 @@
         "gauth = GoogleAuth()\n",
         "gauth.credentials = GoogleCredentials.get_application_default()\n",
         "drive = GoogleDrive(gauth)\n",
-        "downloaded = drive.CreateFile({'id':\"1JGE2GjuC3IeCgzldPx0wpcD-gxqmOh6b\"}) \n",
-        "downloaded.GetContentFile('stockvbs.vbs')\n",
-        "downloaded = drive.CreateFile({'id':\"1wlcFTkdLTri48ufBLBFbJ-6mZCKia14R\"}) \n",
-        "downloaded.GetContentFile('ccvbs.vbs')\n",
-        "downloaded = drive.CreateFile({'id':\"1OaC_zHyZ2f5hxXNlDm1Q_6WSFuiECUtY\"}) \n",
-        "downloaded.GetContentFile('Forexvb.vbs')\n",
+        "downloaded = drive.CreateFile({'id':\"1gg_kya-6rcdcpVZECB3GzrR7Fp9nd8NN\"}) \n",
+        "downloaded.GetContentFile('script.vbs')\n",
         "downloaded = drive.CreateFile({'id':\"1W28WyCwUF-0d0lYoedtVgp6fw4-4okpX\"})\n",
         "downloaded.GetContentFile('Finance Analysis.xlsx')\n",
         "downloaded = drive.CreateFile({'id':\"1ukO0Ls34dnqwsnJ_xZAfC4ASBLCEtfbN\"}) \n",
@@ -406,11 +402,11 @@
       "metadata": {
         "id": "zN9K7b7yuK41",
         "colab_type": "code",
+        "outputId": "4af08f93-de25-4d1a-f832-70534e3dfe5e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 559
-        },
-        "outputId": "4af08f93-de25-4d1a-f832-70534e3dfe5e"
+        }
       },
       "source": [
         "#@title Forex { display-mode: \"form\",run: \"auto\" }\n",
@@ -418,7 +414,7 @@
         "Currency2= \"CNY\" #@param [\"AED\",\"AFN\",\"ALL\",\"AMD\",\"ANG\",\"AOA\",\"ARS\",\"AUD\",\"AWG\",\"AZN\",\"BAM\",\"BBD\",\"BDT\",\"BGN\",\"BHD\",\"BIF\",\"BMD\",\"BND\",\"BOB\",\"BRL\",\"BSD\",\"BTN\",\"BWP\",\"BZD\",\"CAD\",\"CDF\",\"CHF\",\"CLF\",\"CLP\",\"CNH\",\"CNY\",\"COP\",\"CUP\",\"CVE\",\"CZK\",\"DJF\",\"DKK\",\"DOP\",\"DZD\",\"EGP\",\"ERN\",\"ETB\",\"EUR\",\"FJD\",\"FKP\",\"GBP\",\"GEL\",\"GHS\",\"GIP\",\"GMD\",\"GNF\",\"GTQ\",\"GYD\",\"HKD\",\"HNL\",\"HRK\",\"HTG\",\"HUF\",\"IDR\",\"ILS\",\"INR\",\"IQD\",\"IRR\",\"ISK\",\"JEP\",\"JMD\",\"JOD\",\"JPY\",\"KES\",\"KGS\",\"KHR\",\"KMF\",\"KPW\",\"KRW\",\"KWD\",\"KYD\",\"KZT\",\"LAK\",\"LBP\",\"LKR\",\"LRD\",\"LSL\",\"LYD\",\"MAD\",\"MDL\",\"MGA\",\"MKD\",\"MMK\",\"MNT\",\"MOP\",\"MRO\",\"MRU\",\"MUR\",\"MVR\",\"MWK\",\"MXN\",\"MYR\",\"MZN\",\"NAD\",\"NGN\",\"NOK\",\"NPR\",\"NZD\",\"OMR\",\"PAB\",\"PEN\",\"PGK\",\"PHP\",\"PKR\",\"PLN\",\"PYG\",\"QAR\",\"RON\",\"RSD\",\"RUB\",\"RUR\",\"RWF\",\"SAR\",\"SBD\",\"SCR\",\"SDG\",\"SEK\",\"SGD\",\"SHP\",\"SLL\",\"SOS\",\"SRD\",\"SYP\",\"SZL\",\"THB\",\"TJS\",\"TMT\",\"TND\",\"TOP\",\"TRY\",\"TTD\",\"TWD\",\"TZS\",\"UAH\",\"UGX\",\"USD\",\"UYU\",\"UZS\",\"VND\",\"VUV\",\"WST\",\"XAF\",\"XAG\",\"XAU\",\"XCD\",\"XDR\",\"XOF\",\"XPF\",\"YER\",\"ZAR\",\"ZMW\",\"ZWL\"]\n",
         "Forex(Currency1,Currency2,20)  "
       ],
-      "execution_count": 29,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -493,18 +489,18 @@
       "metadata": {
         "id": "VHj3ibBGugOO",
         "colab_type": "code",
+        "outputId": "1f29a243-de4c-407d-dcbc-302346abef4f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 559
-        },
-        "outputId": "1f29a243-de4c-407d-dcbc-302346abef4f"
+        }
       },
       "source": [
         "#@title CryptoCurrency { display-mode: \"form\",run: \"auto\" }\n",
         "Currency= \"INR\" #@param [\"AED\",\"AFN\",\"ALL\",\"AMD\",\"ANG\",\"AOA\",\"ARS\",\"AUD\",\"AWG\",\"AZN\",\"BAM\",\"BBD\",\"BDT\",\"BGN\",\"BHD\",\"BIF\",\"BMD\",\"BND\",\"BOB\",\"BRL\",\"BSD\",\"BTN\",\"BWP\",\"BZD\",\"CAD\",\"CDF\",\"CHF\",\"CLF\",\"CLP\",\"CNH\",\"CNY\",\"COP\",\"CUP\",\"CVE\",\"CZK\",\"DJF\",\"DKK\",\"DOP\",\"DZD\",\"EGP\",\"ERN\",\"ETB\",\"EUR\",\"FJD\",\"FKP\",\"GBP\",\"GEL\",\"GHS\",\"GIP\",\"GMD\",\"GNF\",\"GTQ\",\"GYD\",\"HKD\",\"HNL\",\"HRK\",\"HTG\",\"HUF\",\"IDR\",\"ILS\",\"INR\",\"IQD\",\"IRR\",\"ISK\",\"JEP\",\"JMD\",\"JOD\",\"JPY\",\"KES\",\"KGS\",\"KHR\",\"KMF\",\"KPW\",\"KRW\",\"KWD\",\"KYD\",\"KZT\",\"LAK\",\"LBP\",\"LKR\",\"LRD\",\"LSL\",\"LYD\",\"MAD\",\"MDL\",\"MGA\",\"MKD\",\"MMK\",\"MNT\",\"MOP\",\"MRO\",\"MRU\",\"MUR\",\"MVR\",\"MWK\",\"MXN\",\"MYR\",\"MZN\",\"NAD\",\"NGN\",\"NOK\",\"NPR\",\"NZD\",\"OMR\",\"PAB\",\"PEN\",\"PGK\",\"PHP\",\"PKR\",\"PLN\",\"PYG\",\"QAR\",\"RON\",\"RSD\",\"RUB\",\"RUR\",\"RWF\",\"SAR\",\"SBD\",\"SCR\",\"SDG\",\"SEK\",\"SGD\",\"SHP\",\"SLL\",\"SOS\",\"SRD\",\"SYP\",\"SZL\",\"THB\",\"TJS\",\"TMT\",\"TND\",\"TOP\",\"TRY\",\"TTD\",\"TWD\",\"TZS\",\"UAH\",\"UGX\",\"USD\",\"UYU\",\"UZS\",\"VND\",\"VUV\",\"WST\",\"XAF\",\"XAG\",\"XAU\",\"XCD\",\"XDR\",\"XOF\",\"XPF\",\"YER\",\"ZAR\",\"ZMW\",\"ZWL\"]\n",
         "Cc(Currency,20)"
       ],
-      "execution_count": 30,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -579,18 +575,18 @@
       "metadata": {
         "id": "Ide3tdgIuiZj",
         "colab_type": "code",
+        "outputId": "11eade4d-b460-44ce-f9b1-7b591c3b2942",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 559
-        },
-        "outputId": "11eade4d-b460-44ce-f9b1-7b591c3b2942"
+        }
       },
       "source": [
         "#@title Stock { display-mode: \"form\",run: \"auto\" }\n",
         "Company = \"AAPL\" #@param {type:\"string\"}\n",
         "Stock(Company,12)"
       ],
-      "execution_count": 31,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -668,7 +664,7 @@
         "colab": {}
       },
       "source": [
-        "#Run the VB Scripts and View the dashboard in Finance Analysis.xlsx\n",
+        "#Run the VB Script and View the dashboard in Finance Analysis.xlsx\n",
         "#Since we openpyxl dont work with pivot chart\n",
         "#This script copies from one excel to another to get the dashboard."
       ],
